# skillshot

./: Makefile  README.md  pyproject.toml
src/skillshot/: __init__.py  runner.py  workspace.py
tests/: test_runner.py  test_workspace.py
